# dirtie-node

./: CMakeLists.txt  LICENSE  README.md  connect.c  connect.h  dirtie_config.h  dirtie_globals.h  gdbinit.in  host.c  lwipopts.h  main.c  memmap_custom.ld  sensor.c  sensor.h  test.c  tusb_config.h  usb_cfg.c  usb_cfg.h  usb_descriptors.c
access_point/: host.c  host.h
connect/: connect.c
docs/: network.md
flashmem/: flashmem.c  flashmem.h
hw_test/: test.c
json/: json.c  json.h
src/: dt_err.h  dt_globals.h  main.c
src/access_point/: dhcpserver.c  dhcpserver.h  host.c  host.h
src/b64/: b64.c  b64.h
src/basicio/: basicio.c  basicio.h
src/connect/: connect.c  connect.h
src/flashmem/: flashmem.c  flashmem.h
src/logger/: logger.c  logger.h
src/sensor/: sensor.c  sensor.h
src/state/: state.c  state.h
src/util/: util.c  util.h
test/: test_flashmem.c  test_main.c  test_some_module.c
